create event-tile component to show the event details

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,8 @@
 </head>
 <body>
     <h1>ThoughtWorks Hyderabad</h1>
+    <event-tile></event-tile>
+
+    <script src="./components/event-tile.js"></script>
 </body>
 </html>
