Add event-tile-list component, added few events

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,14 @@
     <link href="./images/touch-icon-ipad.png" rel="apple-touch-icon" sizes="72x72">
     <link href="./images/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="114x114">
     <link href="./images/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="144x144">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>ThoughtWorks Hyderabad</h1>
-    <event-tile></event-tile>
+    <event-tile-list></event-tile-list>
 
+    <script src="./data/events.js"></script>
     <script src="./components/event-tile.js"></script>
+    <script src="./components/event-tile-list.js"></script>
 </body>
 </html>
