Adding open sans font

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="./src/images/touch-icon-ipad.png" rel="apple-touch-icon" sizes="72x72">
     <link href="./src/images/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="114x114">
     <link href="./src/images/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
