Placeholder for the intro seciton

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
+    <section class="intro">
+    </section>
     <h1>ThoughtWorks Hyderabad</h1>
     <event-tile-list></event-tile-list>
 
