--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <section class="intro">
+        <nav class="intro__nav">
+            <img src="./src/images/tw_logo.svg" alt="ThoughtWorks Logo" />
+        </nav>
     </section>
     <h1>ThoughtWorks Hyderabad</h1>
     <event-tile-list></event-tile-list>
